SERVER-45525 ReplBatcher should explicitly read at kNoTimestamp